# ParallelPCA

./: README.md
mpi/: CMakeLists.txt  main.c
mpi/utils/: io_utils.c  io_utils.h  jpeg_to_matrix.c  jpeg_to_matrix.h  la_utils.c  la_utils.h
pthreads/: CMakeLists.txt  main.c
pthreads/utils/: la_utils.c  la_utils.h
serial/: CMakeLists.txt  main.c
serial/utils/: io_utils.c  io_utils.h  la_utils.c  timer.h
